k8s/dev2/backend/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev2
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3001
