k8s/dev2/backend/backend_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-ingressroute
  namespace: dev2
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api-dev2.heyrahul.cloud`)
      services:
        - name: backend
          port: 80
